# gps-tracker

./: .gitlab-ci.yml  License.txt  Readme.md
source/: CMakeLists.txt
source/application/: CMakeLists.txt  GpxItem.cpp  GpxItem.h  GpxModel.cpp  GpxModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MapWidget.qrc  PathController.cpp  PathController.h  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  distance.cpp  distance.h  main.cpp  places.qml  places.qmlc  places.qrc  version.cpp.in  version.h
source/gpxlib/: CMakeLists.txt  Makefile  Readme.md  ReportCerr.cpp
source/gpxlib/gpx/: Algorithm.h  Bounds.h  Copyright.h  DGPSStation.h  DateTime.h  Decimal.h  Degrees.h  EMail.h  Extensions.h  Fix.h  GPX.h  Latitude.h  Link.h  List.h  Longitude.h  Metadata.h  Node.h  PT.h  PTSeg.h  Parser.h  Person.h  RTE.h  Report.h  ReportCerr.h  String_.h  TRK.h  TRKSeg.h  URI.h  Unsigned.h  WPT.h  Writer.h
source/verdigris/: CMakeLists.txt  License.txt  Readme.md
